1998-07-10  Chris Lahey  <clahey@umich.edu>

	* app/docindexif.c: 
	* app/docindexif.h: Screwed up a file name change.

Fri Jul 10 23:06:09 BST 1998 Adam D. Moss <adam@gimp.org>

	* app/paint_funcs.c:
	Fixed copy-on-write path of copy_region which was sometimes
	crashing with Scott's new tile scheme.

	* app/tile_manager.c:
	Added some sanity warnings.

	* app/xcf.c:
	Fixed copy-on-write tile loading which was causing crashes
	with Scott's new tile scheme.  Ref balance count seems funny
	still.

1998-07-10  Chris Lahey  <clahey@umich.edu>

	* app/docindexif.c: New file.
	* app/docindexif.h: New file.
	* app/docindex.h: 
	* app/docindex.c: Lots of changes.  Added docindexif.c and
	docindexif.h as an interface between the document index and the
	application.  This way the document index can be used in two
	applications and updated in both at the same time.  Also, made the
	document index save files even if it's not shown on the screen.

	* app/Makefile.am (gimp_SOURCES): Added docindexif.c and docindexif.h.

Fri Jul 10 01:44:29 PDT 1998 Jay Cox <jaycox@earthlink.net>

	* paint_core.c paint_core.h gimpbrushlist.h gimpbrushlist.c
	  gimpbrushgenerated.c brush_select.h brush_select.c 
        Signalified brushes.  got rid of some warnings. 
        Fixed a bug that showed up when run --no-data

        * paint_funcs.c
        Minor speed tweak to border_region

Thu Jul 9 21:23:46 1998 Scott Goehring <scott@poverty.bloomington.in.us>

	* paint_core.c tile.c undo.c: tile tweaks.

	* tile.c tile_manager.c tile_cache.c tile.h tile_manager.h
	  tile_manager_pvt.h tile_pvt.h:
	  completely redid tile management.

	* blend.c boundary.c by_color_select.c channel.c color_picker.c
 	  drawable_cmds.c frac.c fuzzy_select.c gimpimage.c image_render.c
 	  ink.c layer.c paint_core.c paint_funcs.c pixel_region.c
 	  plug_in.c preferences_dialog.c procedural_db.c transform_core.c
 	  undo.c xcf.c:
	  changed to reflect new tile management protocols.  (Also killed